--- a/_scss/layout/_l-avatar.scss
+++ b/_scss/layout/_l-avatar.scss
@@ -1,12 +1,11 @@
 .l-avatar {
   display: inline-block;
   float: left;
-  height: $avatar-width;
+  margin-right: $article-padding;
   width: $avatar-width;
   @media #{$bp-mobile} {
-    width: $mobile-avatar-width;
-    height: $mobile-avatar-width;
-    padding: 0 $article-contents-padding $article-contents-padding 0;
-    margin-bottom: $mobile-icon-width;
+    margin-bottom: $article-padding;
+    margin-right: 0;
+    width: 100%;
   }
 }
