--- a/_scss/modules/_m-avatar-image.scss
+++ b/_scss/modules/_m-avatar-image.scss
@@ -1,3 +1,8 @@
 .m-avatar-image {
-  width: 100%;
+  height: auto;
+  width: $avatar-width;
+  @media #{$bp-mobile} {
+    height: auto;
+    width: 100%;
+  }
 }
